--- a/package.json
+++ b/package.json
@@ -2,24 +2,23 @@
   "name": "baseliner",
   "version": "1.0.0",
   "description": "compare objects with ease",
-  "main": "build/index.js",
+  "main": "build/bundle.js",
   "scripts": {
-    "build": "babel src -d build",
+    "build": "rollup --config",
     "test": "jest",
     "test:watch": "npm test -- --watch",
     "coverage": "jest --coverage"
-  },
-  "babel": {
-    "presets": [
-      "env"
-    ]
   },
   "author": "PJ Trainor",
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.1",
-    "jest": "^21.2.1"
+    "jest": "^21.2.1",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-commonjs": "^8.2.6",
+    "rollup-plugin-node-resolve": "^3.0.0"
   },
   "dependencies": {
     "lodash.curry": "^4.1.1"
