--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "compare objects with ease",
   "main": "build/bundle.js",
   "scripts": {
-    "build": "rollup --config",
+    "build": "babel src -d build",
     "test": "jest",
     "test:watch": "npm test -- --watch",
     "coverage": "jest --coverage"
@@ -17,6 +17,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-jest": "^21.2.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.1",
     "jest": "^21.2.1",
@@ -24,7 +25,5 @@
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-node-resolve": "^3.0.0"
   },
-  "dependencies": {
-    "lodash.curry": "^4.1.1"
-  }
+  "dependencies": {}
 }
