--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "baseliner",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "compare objects with ease",
-  "main": "build/index.js",
+  "main": "build/index.cjs.js",
+  "module": "build/index.es.js",
   "scripts": {
-    "build": "babel src -d build",
+    "build": "rollup --config",
     "test": "jest",
     "test:watch": "npm test -- --watch",
     "coverage": "jest --coverage"
@@ -17,13 +18,10 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-jest": "^21.2.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.1",
     "jest": "^21.2.1",
     "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-node-resolve": "^3.0.0"
-  },
-  "dependencies": {}
+  }
 }
